Added a cgi file for running the program on a webserver using html

--- a/cgi/spgGen.html
+++ b/cgi/spgGen.html
@@ -74,14 +74,10 @@ scalingFactor          = 0.5
 # This sets the maximum number of attempts to generate any given spacegroup
 maxAttempts            = 100
 
-# This sets the output directory
-outputDir              = temp
-
-# Verbosity indicates how much output to generate in the log file
+# Verbosity indicates how much output to generate in the log file (the log
+# file will be prepended to the html output)
 # 'n' is no output, 'r' is regular output, and 'v' is verbose output
 verbosity              = r
-
-# In the output POSCAR, the name is <composition>_<spg>-<index>
 </textarea>
 <br>
 <br>
