Changed the cgi address to match that of what it'd be on the server.

--- a/cgi/spgGen.html
+++ b/cgi/spgGen.html
@@ -2,7 +2,7 @@
 <body>
 <title>SpgGen: Generate Random Crystals with Specific Spacegroups</title>
 
-<form action="http://localhost:8000/spgGen.cgi" method=post>
+<form action="spgGen.cgi" method=post>
 
 <h1>SpgGen: Generate Random Crystals with Specific Spacegroups</h1>
 
