--- a/cgi/spgGen.html
+++ b/cgi/spgGen.html
@@ -19,7 +19,7 @@ First line is a comment line
 composition            = Mg4Al2
 
 # Which spacegroups to generate are set as follows (hyphens and commas work)
-spacegroups            = 1-8, 10, 25, 28, 30-32
+spacegroups            = 1-6, 10, 25
 
 # lattice mins and maxes set constraints on the lattice to be generated.
 # Distances are in Angstroms and angles are in degrees.
@@ -71,7 +71,7 @@ numOfEachSpgToGenerate = 3
 # The new radii are equal to (radius * scalingFactor)
 # This is particularly useful when changing the pressure of a crystal
 
-#scalingFactor          = 0.5
+scalingFactor          = 0.5
 
 # This sets the maximum number of attempts to generate any given spacegroup
 maxAttempts            = 50
@@ -89,6 +89,14 @@ verbosity              = r
 
 <h2>Notes:</h2>
 <ul>
+  <li>
+    Since this program is running on a server that runs other programs, it may
+    run too slow (depending on the settings) and time out.
+    If you'd like to run it at full speed,
+    please obtain and compile the program from
+    <a href="http://www.github.com/psavery/spgGen">the Github repository</a>
+    and run the executable on your local computer.
+  </li>
   <li>
     The POSCAR format is specified <a href="http://cms.mpi.univie.ac.at/vasp/vasp/POSCAR_file.html">here</a>.
   </li>
