Changed the program name from SpgGen to RandSpg

--- a/cgi/randSpg.html
+++ b/cgi/randSpg.html
@@ -1,16 +1,16 @@
 <html>
 <body>
-<title>SpgGen: Generate Random Crystals with Specific Spacegroups</title>
+<title>RandSpg: Generate Random Crystals with Specific Spacegroups</title>
 
-<form action="spgGen.cgi" method=post>
+<form action="randSpg.cgi" method=post>
 
-<h1>SpgGen: Generate Random Crystals with Specific Spacegroups</h1>
+<h1>RandSpg: Generate Random Crystals with Specific Spacegroups</h1>
 
 A sample input is given in the text area below.<br>
-Change it around as needed and click "submit" when you are ready for <b>SpgGen</b> to generate the crystal structures!
+Change it around as needed and click "submit" when you are ready for <b>RandSpg</b> to generate the crystal structures!
 <br>
 <br>
-<textarea name="spgGenInput" rows=30 cols=100>
+<textarea name="randSpgInput" rows=30 cols=100>
 First line is a comment line
 
 # Anything to the right of a hash is a comment
@@ -94,7 +94,7 @@ verbosity              = r
     run too slow (depending on the settings) and time out.
     If you'd like to run it at full speed,
     please obtain and compile the program from
-    <a href="http://www.github.com/psavery/spgGen">the Github repository</a>
+    <a href="http://www.github.com/psavery/randSpg">the Github repository</a>
     and run the executable on your local computer.
   </li>
   <li>
@@ -109,15 +109,15 @@ verbosity              = r
 </ul>
 
 <h2>About:</h2>
-<b>SpgGen</b> is an algorithm developed
+<b>RandSpg</b> is an algorithm developed
 by <a href="mailto:psavery@buffalo.edu">Patrick Avery</a>.
-<b>SpgGen</b> generates random crystals of specific spacegroups and allows
+<b>RandSpg</b> generates random crystals of specific spacegroups and allows
 the user to
 specify a lot of information such as minimum interatomic distances, volume
 constraints, etc. The <b>source code</b> is available under
 the <a href="http://opensource.org/licenses/BSD-3-Clause">"New" BSD
 open source license</a>
-and may be viewed at <a href="http://www.github.com/psavery/spgGen">its Github
+and may be viewed at <a href="http://www.github.com/psavery/randSpg">its Github
 repository</a>.
 
 <br><br>If you encounter any bugs, please email me at psavery@buffalo.edu
